# loot

./: .gitignore  README.md  pyproject.toml  requirements.txt
loot/: __init__.py  cli.py  config.py  embedder.py  file_filters.py  indexer.py  search.py  storage.py  vector_index.py
tests/: __init__.py  test_chunking.py
